--- a/package.json
+++ b/package.json
@@ -3,18 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/core": "^11.0.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "framer-motion": "^4.1.17",
     "normalize.css": "^8.0.1",
+    "rc-drawer": "^4.4.3",
     "react": "^17.0.2",
+    "react-custom-scrollbars-2": "^4.4.0",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-particles-js": "^3.5.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-scroll": "^1.8.7",
     "react-stickynode": "^4.0.0",
+    "rm": "^0.1.8",
     "styled-components": "^5.3.0",
+    "theme-ui": "^0.14.4",
     "tsparticles": "^1.31.1",
     "web-vitals": "^1.1.2"
   },
